--- a/store/package.json
+++ b/store/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
+    "firebase": "^7.15.1",
     "primeflex": "^1.1.1",
     "primeicons": "^4.0.0-rc.2",
     "primereact": "^4.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-firebaseui": "^4.1.0",
     "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
